--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
             color: var(--light);
             min-height: 100vh;
             overflow-x: hidden;
+            overflow-y: auto;
+        }
+
+        /* Lock scroll on mobile/TV layout */
+        @media (max-width: 992px) {
+            body {
+                overflow: hidden;
+            }
         }
 
         .main-header {
@@ -754,15 +762,15 @@
         @media (max-width: 992px) {
             .main-container {
                 flex-direction: column;
-                height: auto;
-                min-height: calc(100vh - 75px);
+                height: calc(100vh - 75px);
+                overflow: hidden;
                 padding: 15px;
                 gap: 15px;
             }
 
             .player-section {
-                position: sticky;
-                top: 75px;
+                position: relative;
+                top: auto;
                 z-index: 5;
                 width: 100%;
                 height: 45vh;
@@ -773,8 +781,9 @@
 
             .channels-section {
                 width: 100%;
-                height: 50vh;
+                height: calc(100% - 45vh - 30px);
                 flex-grow: 1;
+                min-height: 200px;
             }
 
             .channels-grid {
