--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script>(function(s){s.dataset.zone='10408286',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iptv Tv web</title>
+    <title>Iptv BY HAMZA_CYBER</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -894,7 +894,7 @@
             <div class="splash-logo">
                 <i class="fas fa-satellite-dish"></i>
             </div>
-            <h1 class="splash-title">IPTV WEB</h1>
+            <h1 class="splash-title">IPTV HC</h1>
             <p class="splash-subtitle">Join our community for updates & support</p>
             
             <div class="social-buttons">
@@ -925,7 +925,7 @@
             <div class="logo-icon">
                 <i class="fas fa-satellite-dish"></i>
             </div>
-            <div class="logo-text">IPTV WEB</div>
+            <div class="logo-text">IPTV HC</div>
         </div>
         
         <div class="search-container">
