--- a/index.html
+++ b/index.html
@@ -885,6 +885,26 @@
                 font-size: 1.1rem;
             }
         }
+        /* Force PC Layout on Android TV */
+@media screen and (min-width: 800px) {
+    .main-container {
+        flex-direction: row !important;
+        height: calc(100vh - 75px) !important;
+    }
+
+    .player-section {
+        position: relative !important;
+        top: auto !important;
+        height: auto !important;
+        min-height: 0 !important;
+        flex: 1.5 !important;
+    }
+
+    .channels-section {
+        width: 500px !important;
+        height: auto !important;
+    }
+}
     </style>
 </head>
 <body>
